add fix leaderboard
